--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "manifest_version": 2,
   "name": "Custom Style Manager",
   "author": "Halil Can",
-  "version": "1.0.3",
+  "version": "1.1.X",
 
   "description": "Custom Style Manager allows domain-level custom CSS styling for any website you visit.",
   "homepage_url": "https://github.com/HalilCan/customStyleManager",
